# my-translator

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: project-changelog.md  tts_guide.md  tts_guide_vi.md
scripts/: tauri-with-env.mjs
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  settings.rs
src-tauri/src/audio/: microphone.rs  resampler.rs  system_audio.rs  wasapi.rs
src-tauri/src/commands/: audio.rs  edge_tts.rs  local_pipeline.rs  local_tts.rs  mod.rs  openai_realtime.rs  qwen_realtime.rs  session_store.rs  settings.rs  transcript.rs
src/js/: app.js  audio-player.js  edge-tts.js  google-free-tts.js  google-tts.js  local-tts.js  microsoft-tts.js  qwen-realtime-client.js  read-chunker.js  reader.js  settings.js  soniox.js  tauri-mock.js  tiktok-tts.js
src/styles/: main.css
